@@ -2,12 +2,14 @@ package com.example.gadgetariumb8.db.service.impl;
 
 import com.example.gadgetariumb8.db.dto.response.SimpleResponse;
 import com.example.gadgetariumb8.db.dto.response.SubProductBasketResponse;
+import com.example.gadgetariumb8.db.exception.exceptions.BadRequestException;
 import com.example.gadgetariumb8.db.exception.exceptions.NotFoundException;
 import com.example.gadgetariumb8.db.model.SubProduct;
 import com.example.gadgetariumb8.db.model.User;
 import com.example.gadgetariumb8.db.repository.SubProductRepository;
 import com.example.gadgetariumb8.db.repository.UserRepository;
 import com.example.gadgetariumb8.db.service.BasketService;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -15,7 +17,9 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
+
 @Slf4j
 @Service
 @RequiredArgsConstructor
@@ -43,25 +47,21 @@ public class BasketServiceImpl implements BasketService {
                        p.id                                                                                        productId,
                        sp.id                                                                                       subProductId,
                        p.name                                                                                   AS names,
-                       p.description                                                                            AS description,
-                       ub.basket                                                                                AS quantity,
+                       sp.quantity                                                                              AS quantity,
                        sp.item_number                                                                           AS itemNumber,
                        sp.price                                                                                 AS price,
                        p.rating                                                                                 as rating,
-                       (SELECT count(r2)
-                        FROM products psd
-                                 JOIN reviews r2 on psd.id = r2.product_id
-                        where psd.id = p.id)                                                                    as numberOfReviews,
-                       ub.basket                                                                                as basket,
-                       (SELECT ds.percent
-                               from discounts ds
+                       (SELECT count(r)
+                        FROM reviews r WHERE r.product_id = p.id)                                               as numberOfReviews,
+                       ub.basket                                                                                as quantityProduct,
+                       (SELECT d.percent
+                               from discounts d
                                where d.date_of_start <= CURRENT_DATE
-                                 and d.date_of_finish >= CURRENT_DATE and ds.id = d.id)                                             as percents
+                                 AND d.date_of_finish >= CURRENT_DATE AND d.id = sp.discount_id)                as percents
                 FROM sub_products sp
                          JOIN products p ON p.id = sp.product_id
                          JOIN user_basket ub ON sp.id = ub.basket_key
                          JOIN users u ON ub.user_id = u.id
-                         JOIN discounts d on d.id = sp.discount_id
                 WHERE u.id = ?
                  """;
         log.info("All baskets are successfully got!");
@@ -71,14 +71,13 @@ public class BasketServiceImpl implements BasketService {
                         resultSet.getLong("subProductId"),
                         resultSet.getString("img"),
                         resultSet.getString("names"),
-                        resultSet.getString("description"),
                         resultSet.getDouble("rating"),
                         resultSet.getInt("numberOfReviews"),
                         resultSet.getInt("quantity"),
                         resultSet.getInt("itemNumber"),
                         resultSet.getBigDecimal("price"),
                         resultSet.getInt("percents"),
-                        resultSet.getInt("basket")
+                        resultSet.getInt("quantityProduct")
                 ), getAuthenticate().getId()
         );
     }
@@ -103,19 +102,6 @@ public class BasketServiceImpl implements BasketService {
     }
 
     @Override
-    public SimpleResponse moveToFavorite(List<Long> longs) {
-        User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
-        for (Long aLong : longs) {
-            user.getFavorites().add(subProductRepository.findById(aLong)
-                    .orElseThrow(() -> new NotFoundException("Sub product with id:" + aLong + " not found!!!")));
-        }
-        userRepository.save(user);
-        return SimpleResponse.builder()
-                .message("Products have successfully moved to Favorites").httpStatus(HttpStatus.OK).build();
-    }
-
-    @Override
     public SimpleResponse deleteBasketById(Long id) {
         User user = userRepository.findById(getAuthenticate().getId())
                 .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
@@ -126,24 +112,15 @@ public class BasketServiceImpl implements BasketService {
     }
 
     @Override
-    public SimpleResponse moveToFavoriteById(Long id) {
-        User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
-        user.getFavorites().add(subProductRepository.findById(id)
-                .orElseThrow(() -> new NotFoundException("Sub product with id:" + id + " not found!!!")));
-        userRepository.save(user);
-        return SimpleResponse.builder()
-                .message("Products have successfully moved to Favorites").httpStatus(HttpStatus.OK).build();
-    }
-
-    @Override
-    public SimpleResponse saveBasket(Long id,int quantity) {
-        SubProduct subProduct = subProductRepository.findById(id)
-                .orElseThrow(()->new NotFoundException(String.format("Product with id %s is not found!", id)));
-        User user = userRepository.findById(getAuthenticate().getId())
-                .orElseThrow(() -> new NotFoundException("User with id:" + getAuthenticate().getId() + " not found!!!"));
-        user.getBasket().put(subProduct, quantity);
-        userRepository.save(user);
+    @Transactional
+    public SimpleResponse saveBasket(Long subProductId, int quantity) {
+        SubProduct subProduct = subProductRepository.findById(subProductId)
+                .orElseThrow(() -> new NotFoundException(String.format("Product with id %s is not found!", subProductId)));
+        User user = getAuthenticate();
+        if (user.getBasket().containsKey(subProduct)) {
+            throw new BadRequestException("Sub products with id %s is already exists in basket".formatted(subProductId));
+        }
+        user.addToBasket(subProduct, quantity);
         return SimpleResponse.builder()
                 .httpStatus(HttpStatus.OK)
                 .message("Products have successfully saved!!!")
